* added a 'top customized completed email' setting * tweaked spacing on the 'new user' button, so it is away from the new WC 'view other orders' link * tweaked 'multiday event' display * fixed 'locked event settings' box issue * fixed calendar event fetch edgecase bug * fixed locale issue on my account page * fixed the 'customized email' issue loushou
git-svn-id: https://plugins.svn.wordpress.org/opentickets-community-edition/trunk@1122551 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/admin/base.css
+++ b/assets/css/admin/base.css
@@ -168,7 +168,10 @@ ul#adminmenu a.qsot-special-arrow:after {
 	content:" "; height:0; margin-top:-8px; pointer-events:none; position:absolute; right:0; top:50%; width:0;
 }
 
-.new-user-btn { float:right; clear:none; }
+.new-user-btn-wrap { float:right; clear:none; }
+.new-user-btn-wrap span { display:none; }
+.new-user-btn-wrap a { float:none !important; }
+.wc-customer-user a+span.new-user-btn-wrap span.divider { display:inline; padding:0 3px 0 1px; }
 
 /* reporting */
 #report_result .ticket-list td.status { white-space:nowrap; }
